[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "Stupid little spider"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
requests = "^2.31.0"
httpx = "^0.24.1"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
tqdm = "^4.65.0"
typer = {extras = ["all"], version = "^0.9.0"}
aiofiles = "^23.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
